--- a/code/backend/requirements.txt
+++ b/code/backend/requirements.txt
@@ -1,12 +1,73 @@
+# Core Framework
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
+pydantic==2.5.2
+pydantic-settings==2.1.0
+
+# Database
 sqlalchemy==2.0.23
+alembic==1.13.1
 psycopg2-binary==2.9.9
+asyncpg==0.29.0
+
+# Authentication & Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-python-dotenv==1.0.0
+cryptography==41.0.7
+pyotp==2.9.0
+
+# Redis & Caching
+redis==5.0.1
+hiredis==2.2.3
+
+# Blockchain
 web3==6.11.1
+eth-account==0.9.0
+eth-utils==2.3.1
+
+# HTTP & API
+httpx==0.25.2
 requests==2.31.0
-pydantic==2.5.2
-pydantic-settings==2.1.0
+aiohttp==3.9.1
+
+# Environment & Configuration
+python-dotenv==1.0.0
+pyyaml==6.0.1
+
+# Monitoring & Logging
+structlog==23.2.0
+prometheus-client==0.19.0
+sentry-sdk[fastapi]==1.38.0
+
+# Validation & Serialization
+marshmallow==3.20.2
+cerberus==1.3.5
+
+# Financial & Risk
+numpy==1.25.2
+pandas==2.1.4
+scipy==1.11.4
+
+# Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+httpx==0.25.2
+factory-boy==3.3.0
+
+# Development
+black==23.11.0
+flake8==6.1.0
+mypy==1.7.1
+pre-commit==3.6.0
+
+# Message Queue
+celery==5.3.4
+kombu==5.3.4
+
+# Utilities
+python-dateutil==2.8.2
+pytz==2023.3
+click==8.1.7
+
