Refactor code and enhance maintainability.

--- a/code/backend/.env.example
+++ b/code/backend/.env.example
@@ -1,4 +1,4 @@
-# ChainFinity Backend Environment Configuration
+# ChainFinity Production Backend Environment Configuration
 
 # Application Settings
 APP_NAME=ChainFinity API
@@ -16,19 +16,22 @@ DOCS_URL=/docs
 REDOC_URL=/redoc
 
 # Database Configuration
-DATABASE_URL=postgresql+asyncpg://postgres:password@localhost:5432/chainfinity
-DATABASE_READ_URL=postgresql+asyncpg://postgres:password@localhost:5432/chainfinity_read
+DATABASE_URL=postgresql+asyncpg://postgres:your_password@localhost:5432/chainfinity
+DATABASE_READ_URL=postgresql+asyncpg://postgres:your_password@localhost:5432/chainfinity_read
 DB_POOL_SIZE=20
 DB_MAX_OVERFLOW=30
 DB_POOL_TIMEOUT=30
 DB_POOL_RECYCLE=3600
 DB_ECHO=false
+DB_ECHO_POOL=false
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379/0
 REDIS_PASSWORD=
 REDIS_DB=0
 REDIS_MAX_CONNECTIONS=20
+REDIS_SOCKET_TIMEOUT=5
+REDIS_SOCKET_CONNECT_TIMEOUT=5
 CACHE_TTL=3600
 SESSION_TTL=86400
 
@@ -37,24 +40,17 @@ SECRET_KEY=your-super-secret-key-change-this-in-production
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=7
-
-# Password Security
 PASSWORD_MIN_LENGTH=8
 PASSWORD_REQUIRE_UPPERCASE=true
 PASSWORD_REQUIRE_LOWERCASE=true
 PASSWORD_REQUIRE_NUMBERS=true
 PASSWORD_REQUIRE_SPECIAL=true
-
-# Rate Limiting
 RATE_LIMIT_PER_MINUTE=60
 RATE_LIMIT_BURST=100
-
-# CORS Configuration
-CORS_ORIGINS=http://localhost:3000,https://yourdomain.com
+API_KEY_HEADER=X-API-Key
+CORS_ORIGINS=*
 CORS_ALLOW_CREDENTIALS=true
-
-# Encryption
-ENCRYPTION_KEY=your-encryption-key-32-characters
+ENCRYPTION_KEY=your-encryption-key-32-chars-long
 FIELD_ENCRYPTION_ENABLED=true
 
 # Blockchain Configuration
@@ -65,16 +61,10 @@ POLYGON_RPC_URL=https://polygon-mainnet.infura.io/v3/YOUR_PROJECT_ID
 POLYGON_CHAIN_ID=137
 BSC_RPC_URL=https://bsc-dataseed.binance.org/
 BSC_CHAIN_ID=56
-
-# Gas Configuration
 GAS_PRICE_STRATEGY=medium
 MAX_GAS_PRICE=100
-
-# Contract Addresses
-GOVERNANCE_TOKEN_ADDRESS=0x...
-ASSET_VAULT_ADDRESS=0x...
-
-# API Keys
+GOVERNANCE_TOKEN_ADDRESS=
+ASSET_VAULT_ADDRESS=
 ETHERSCAN_API_KEY=your_etherscan_api_key
 POLYGONSCAN_API_KEY=your_polygonscan_api_key
 
@@ -83,33 +73,49 @@ KYC_ENABLED=true
 KYC_PROVIDER=jumio
 KYC_API_KEY=your_kyc_api_key
 KYC_API_SECRET=your_kyc_api_secret
-
-# AML Configuration
 AML_ENABLED=true
 AML_PROVIDER=chainalysis
 AML_API_KEY=your_aml_api_key
-
-# Transaction Monitoring
 TRANSACTION_MONITORING_ENABLED=true
 SUSPICIOUS_AMOUNT_THRESHOLD=10000.0
 DAILY_TRANSACTION_LIMIT=50000.0
-
-# Regulatory Reporting
 REGULATORY_REPORTING_ENABLED=true
 AUDIT_LOG_RETENTION_DAYS=2555
 
 # Monitoring Configuration
 LOG_LEVEL=INFO
 LOG_FORMAT=json
+LOG_FILE=
 METRICS_ENABLED=true
 METRICS_PORT=8001
 HEALTH_CHECK_INTERVAL=30
-
-# Sentry Configuration
 SENTRY_DSN=your_sentry_dsn
 SENTRY_ENVIRONMENT=production
 
 # External Services
-NOTIFICATION_SERVICE_URL=https://notifications.yourdomain.com
-ANALYTICS_SERVICE_URL=https://analytics.yourdomain.com
+NOTIFICATION_SERVICE_URL=
+ANALYTICS_SERVICE_URL=
+
+# Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=your_email@gmail.com
+SMTP_PASSWORD=your_app_password
+SMTP_USE_TLS=true
+FROM_EMAIL=noreply@chainfinity.com
+
+# File Storage
+STORAGE_TYPE=local
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_BUCKET_NAME=
+AWS_REGION=us-east-1
+
+# Celery Configuration
+CELERY_BROKER_URL=redis://localhost:6379/1
+CELERY_RESULT_BACKEND=redis://localhost:6379/1
+CELERY_TASK_SERIALIZER=json
+CELERY_RESULT_SERIALIZER=json
+CELERY_ACCEPT_CONTENT=json
+CELERY_TIMEZONE=UTC
 
