--- a/infrastructure/docker-compose.prod.yml
+++ b/infrastructure/docker-compose.prod.yml
@@ -1,30 +1,30 @@
-version: "3.8"
+version: '3.8'
 
 services:
-  postgres:
-    image: postgres:15
-    env_file: .env
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    networks:
-      - ccamp-net
+    postgres:
+        image: postgres:15
+        env_file: .env
+        volumes:
+            - pgdata:/var/lib/postgresql/data
+        networks:
+            - ccamp-net
 
-  redis:
-    image: redis:7
-    networks:
-      - ccamp-net
+    redis:
+        image: redis:7
+        networks:
+            - ccamp-net
 
-  backend:
-    build: ../backend
-    env_file: .env
-    ports:
-      - "8000:8000"
-    depends_on:
-      - postgres
-      - redis
+    backend:
+        build: ../backend
+        env_file: .env
+        ports:
+            - '8000:8000'
+        depends_on:
+            - postgres
+            - redis
 
 volumes:
-  pgdata:
+    pgdata:
 
 networks:
-  ccamp-net:
+    ccamp-net:
