--- a/infrastructure/.gitignore
+++ b/infrastructure/.gitignore
@@ -1,5 +1,5 @@
 # ===============================================================
-# QuantumNest Infrastructure .gitignore
+# ChainFinity Infrastructure .gitignore
 # ===============================================================
 
 # =========================
